feat(planet): add PlanetVisualizationView

--- a/composeApp/src/jsMain/resources/index.html
+++ b/composeApp/src/jsMain/resources/index.html
@@ -17,6 +17,10 @@
             }
         </style>
     </head>
-    <body></body>
+    <body>
+    <div>
+        <canvas id="ComposeTarget" width="600" height="600"></canvas>
+    </div>
+    </body>
     <script src="composeApp.js"></script>
 </html>
